# valorant-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  main.py  pyproject.toml  sample_match_details.json
src/valorant_mcp/: callouts.py  config.py  henrik.py  models.py  saygg_analysis.md  server.py  stats.py
src/valorant_mcp/tests/: conftest.py  test_henrik.py  test_models.py  test_stats.py
