[project]
name = "valorant-mcp"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]",
    "httpx",
    "pydantic",
    "pydantic_settings",
]

[build-system]
requires = ["hatchling"]                                                                            
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
]

[project.scripts]
valorant-mcp = "valorant_mcp.server:main"